--- a/tests/Test.TsunaCan.XmlDocumentationTranslator.Core/Test.TsunaCan.XmlDocumentationTranslator.Core.csproj
+++ b/tests/Test.TsunaCan.XmlDocumentationTranslator.Core/Test.TsunaCan.XmlDocumentationTranslator.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
     <PackageReference Include="xunit.v3" />
     <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
