--- a/.github/workflows/lint-documents.yml
+++ b/.github/workflows/lint-documents.yml
@@ -7,9 +7,14 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  document-lint:
     name: ドキュメントのリント
+
+    permissions:
+      contents: read
+
     runs-on: ubuntu-latest
+
     steps:
       - name: ブランチのチェックアウト
         uses: actions/checkout@v4
