--- a/tests/Test.TsunaCan.XmlDocumentationTranslator.Core/Test.TsunaCan.XmlDocumentationTranslator.Core.csproj
+++ b/tests/Test.TsunaCan.XmlDocumentationTranslator.Core/Test.TsunaCan.XmlDocumentationTranslator.Core.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Maris.Logging.Testing" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
     <PackageReference Include="xunit.v3" />
