中立言語を日本語から英語に変更
<NeutralLanguage> プロパティの値を `ja-JP` から `en-US` に変更しました。これにより、アセンブリの中立言語が日本語から英語に変更されます。

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -4,7 +4,7 @@
   
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <NeutralLanguage>ja-JP</NeutralLanguage>
+    <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
 
 </Project>
