--- a/src/TsunaCan.XmlDocumentationTranslator.Core/TsunaCan.XmlDocumentationTranslator.Core.csproj
+++ b/src/TsunaCan.XmlDocumentationTranslator.Core/TsunaCan.XmlDocumentationTranslator.Core.csproj
@@ -1,3 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <RootNamespace>TsunaCan.XmlDocumentationTranslator</RootNamespace>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resources\Messages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Messages.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Messages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="Test.TsunaCan.XmlDocumentationTranslator.Core" />
+  </ItemGroup>
 </Project>
