プロジェクトファイルの修正とパッケージ削除
プロジェクトファイル `Test.TsunaCan.XmlDocumentationTranslator.AI.csproj` において、SDKの行に不正な文字が追加され、`ItemGroup` から `Moq` パッケージの参照が削除されました。

--- a/tests/Test.TsunaCan.XmlDocumentationTranslator.AI/Test.TsunaCan.XmlDocumentationTranslator.AI.csproj
+++ b/tests/Test.TsunaCan.XmlDocumentationTranslator.AI/Test.TsunaCan.XmlDocumentationTranslator.AI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -16,7 +16,6 @@
     <PackageReference Include="Maris.Logging.Testing" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
-    <PackageReference Include="Moq" />
     <PackageReference Include="xunit.v3" />
     <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
