.editorconfigのSA1401診断を無視する設定追加
`.editorconfig`ファイルに`dotnet_diagnostic.SA1401.severity=none`を追加しました。これにより、SA1401診断の警告が無視されるようになります。

--- a/tests/.editorconfig
+++ b/tests/.editorconfig
@@ -3,4 +3,5 @@
 dotnet_diagnostic.IDE0039.severity=none
 dotnet_diagnostic.SA0001.severity=none
 dotnet_diagnostic.SA1123.severity=none
+dotnet_diagnostic.SA1401.severity=none
 dotnet_diagnostic.SA1600.severity=none
