ローカライズ機能の追加とリソース設定の更新
`Messages.Designer.cs` にローカライズされた文字列を管理する `Messages` クラスを追加しました。
`Messages.resx` ファイルを新規作成し、アセンブリ名、メンバー数、ターゲット言語に関するエラーメッセージを定義しました。
プロジェクトファイル `TsunaCan.XmlDocumentationTranslator.AI.csproj` に、リソースファイルのコンパイルおよび埋め込み設定を追加し、自動生成を保証しました。

--- a/src/TsunaCan.XmlDocumentationTranslator.AI/TsunaCan.XmlDocumentationTranslator.AI.csproj
+++ b/src/TsunaCan.XmlDocumentationTranslator.AI/TsunaCan.XmlDocumentationTranslator.AI.csproj
@@ -5,4 +5,17 @@
   <ItemGroup>
     <ProjectReference Include="..\TsunaCan.XmlDocumentationTranslator.Core\TsunaCan.XmlDocumentationTranslator.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Resources\Messages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Messages.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\Messages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
