AIを用いた翻訳機能を追加する (#16)
* パッケージの追加: Microsoft.Extensions.AI.AzureAIInference

`Directory.Packages.props` ファイルに、`Microsoft.Extensions.AI.AzureAIInference` パッケージのバージョン `9.4.0-preview.1.25207.5` を追加しました。

* 新プロジェクト TsunaCan.XmlDocumentationTranslator.AI を追加

ソリューションファイルに新しいプロジェクト `TsunaCan.XmlDocumentationTranslator.AI` を追加し、ビルド構成を設定しました。ネストされたプロジェクトセクションにもこのプロジェクトを追加しました。また、プロジェクトファイルには `Microsoft.Extensions.AI.AzureAIInference` パッケージの参照と、`TsunaCan.XmlDocumentationTranslator.Core` プロジェクトへの参照を追加しました。

* ChunkSize プロパティを Settings に追加

Settings.cs に ChunkSize プロパティを追加し、デフォルト値を 1000 に設定しました。ToString メソッドを更新し、ChunkSize の値を出力に含めるようにしました。SettingsTest.cs のテストケースも更新し、ChunkSize の値が正しく反映されることを確認しました。

* TranslationServiceTestにChunkSizeを追加

`ChunkSize`プロパティを`TranslationServiceTest`クラスの設定に追加しました。これにより、チャンクサイズが1000に設定され、翻訳サービスの動作に影響を与える可能性があります。

* SetMembersInnerXml メソッドのアクセス修飾子変更

`SetMembersInnerXml` メソッドのアクセス修飾子を `internal` から `public` に変更しました。これにより、他のアセンブリからもこのメソッドにアクセスできるようになります。

* IntelliSenseDocumentAccessorにメソッドを追加

`GetMemberCount` と `GetMembers` メソッドを追加し、メンバー要素のカウントやチャンクサイズに基づいてメンバー要素を取得する機能を実装しました。`GetMembers` メソッドは、指定されたチャンクサイズに基づいてメンバー要素を分割して返します。

テストクラス `IntelliSenseDocumentAccessorTest` に新しいテストメソッドを追加し、`GetMembers` メソッドの動作を検証するテストを強化しました。

* プロジェクトファイルのプロパティを削除

`TestingPlatformDotnetTestSupport` と `UseMicrosoftTestingPlatformRunner` のプロパティがプロジェクトファイルから削除されました。

* テストプロジェクトを追加

ソリューションファイルに `Test.TsunaCan.XmlDocumentationTranslator.AI` プロジェクトを追加しました。新たに作成された `Test.TsunaCan.XmlDocumentationTranslator.AI.csproj` では、SDK、出力タイプ、依存関係が定義されています。また、xUnit テストランナーのスキーマを指定した `xunit.runner.json` ファイルも追加されました。

* プロジェクトファイルの修正とパッケージ削除

プロジェクトファイル `Test.TsunaCan.XmlDocumentationTranslator.AI.csproj` において、SDKの行に不正な文字が追加され、`ItemGroup` から `Moq` パッケージの参照が削除されました。

* .editorconfigのSA1401診断を無視する設定追加

`.editorconfig`ファイルに`dotnet_diagnostic.SA1401.severity=none`を追加しました。これにより、SA1401診断の警告が無視されるようになります。

* ローカライズ機能の追加とリソース設定の更新

`Messages.Designer.cs` にローカライズされた文字列を管理する `Messages` クラスを追加しました

--- a/tests/Test.TsunaCan.XmlDocumentationTranslator.AI/Test.TsunaCan.XmlDocumentationTranslator.AI.csproj
+++ b/tests/Test.TsunaCan.XmlDocumentationTranslator.AI/Test.TsunaCan.XmlDocumentationTranslator.AI.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <RootNamespace>TsunaCan.XmlDocumentationTranslator</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,13 +16,12 @@
     <PackageReference Include="Maris.Logging.Testing" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
-    <PackageReference Include="Moq" />
     <PackageReference Include="xunit.v3" />
     <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\TsunaCan.XmlDocumentationTranslator.Core\TsunaCan.XmlDocumentationTranslator.Core.csproj" />
+    <ProjectReference Include="..\..\src\TsunaCan.XmlDocumentationTranslator.AI\TsunaCan.XmlDocumentationTranslator.AI.csproj" />
   </ItemGroup>
 
 </Project>
