--- a/src/TsunaCan.XmlDocumentationTranslator.Cli/TsunaCan.XmlDocumentationTranslator.Cli.csproj
+++ b/src/TsunaCan.XmlDocumentationTranslator.Cli/TsunaCan.XmlDocumentationTranslator.Cli.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TsunaCan.XmlDocumentationTranslator.AI\TsunaCan.XmlDocumentationTranslator.AI.csproj" />
     <ProjectReference Include="..\TsunaCan.XmlDocumentationTranslator.Core\TsunaCan.XmlDocumentationTranslator.Core.csproj" />
   </ItemGroup>
 
