--- a/src/TsunaCan.XmlDocumentationTranslator.AI/TsunaCan.XmlDocumentationTranslator.AI.csproj
+++ b/src/TsunaCan.XmlDocumentationTranslator.AI/TsunaCan.XmlDocumentationTranslator.AI.csproj
@@ -2,6 +2,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.AI" />
     <PackageReference Include="Microsoft.Extensions.AI.AzureAIInference" />
+    <PackageReference Include="Microsoft.Extensions.Options" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TsunaCan.XmlDocumentationTranslator.Core\TsunaCan.XmlDocumentationTranslator.Core.csproj" />
