--- a/src/TsunaCan.XmlDocumentationTranslator.Core/TsunaCan.XmlDocumentationTranslator.Core.csproj
+++ b/src/TsunaCan.XmlDocumentationTranslator.Core/TsunaCan.XmlDocumentationTranslator.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.Options" />
   </ItemGroup>
 
   <ItemGroup>
