コンソールアプリから実行できるようにする (#28)
* 依存関係の更新とプロジェクト参照の追加

`Directory.Packages.props` で `Microsoft.Extensions.AI` と `Microsoft.Extensions.AI.AzureAIInference` のバージョンを `9.4.3-preview.1.25230.7` に更新し、`Microsoft.Extensions.Hosting` を新たに追加しました。

`TsunaCan.XmlDocumentationTranslator.AI.csproj` に `Microsoft.Extensions.AI` と `Microsoft.Extensions.AI.AzureAIInference` のパッケージ参照を追加しました。

`TsunaCan.XmlDocumentationTranslator.Cli.csproj` に `Microsoft.Extensions.Hosting` のパッケージ参照と `TsunaCan.XmlDocumentationTranslator.AI` へのプロジェクト参照を追加しました。

* Program.cs を仮で追加

* Microsoft.Extensions.Options パッケージを追加

`Directory.Packages.props` に `Microsoft.Extensions.Options` のバージョン `9.0.4` を追加し、`TsunaCan.XmlDocumentationTranslator.AI.csproj` にもその参照を追加しました。

* Moqパッケージを追加

プロジェクトファイルに`Moq`パッケージを追加しました。これにより、テストのモックオブジェクトを作成するための機能が利用可能になります。

* AISettingsクラスの追加とSettingsクラスの変更

AI翻訳アプリケーションの設定を表す`AISettings`クラスを新たに追加しました。このクラスには、認証トークン、チャットエンドポイントURL、モデルID、チャンクサイズ、最大同時リクエスト数のプロパティが含まれています。また、`ToString`メソッドをオーバーライドし、トークンの一部をマスクして表示する機能を追加しました。

一方、`Settings`クラスからはAI関連のプロパティが削除され、ソースドキュメントのパスや言語、出力ディレクトリのパス、ログレベルに関連するプロパティが残りました。`ToString`メソッドも更新され、AI関連のプロパティが表示されないように変更されています。

さらに、`AISettingsTest.cs`に`AISettings`クラスのテストを追加し、`ToString`メソッドの動作確認を行うテストケースを作成しました。`SettingsTest.cs`では、AI関連のプロパティに関するテストが削除され、テストがソースドキュメントや出力に関連するプロパティに焦点を当てるようになりました。

* AITranslatorにIDisposableを実装

* 設定クラスをAISettingsに変更しテストを更新

AITranslator.csでSettingsクラスをAISettingsに変更し、コンストラクタの引数をIOptionsSnapshot<AISettings>に更新しました。これにより、設定の取得方法が改善され、依存性注入が強化されました。

AITranslatorTest.csでは、テスト設定をCreateDefaultSettingsメソッドを通じてモックされたIOptionsSnapshot<AISettings>を使用するように変更し、テストの柔軟性を向上させました。また、ソース言語とターゲット言語の設定をハードコーディングし、テストの一貫性を確保しました。

* 設定の簡素化と不要プロパティの削除

`TranslationServiceTest.cs` において、`Settings` クラスのインスタンスが変更されました。`Token`、`ChatEndPointUrl`、`ModelId`、`LogLevel`、および `ChunkSize` のプロパティが削除され、`OutputFileLanguages` プロパティが配列形式に変更されました。これにより、設定の構成が簡素化されました。

* AI翻訳サービスの設定管理を改善

`ServiceCollectionExtensions.cs`内のAI翻訳サービス追加メソッドを更新しました。`Settings`パラメータを`AISe

--- a/src/TsunaCan.XmlDocumentationTranslator.AI/TsunaCan.XmlDocumentationTranslator.AI.csproj
+++ b/src/TsunaCan.XmlDocumentationTranslator.AI/TsunaCan.XmlDocumentationTranslator.AI.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.AI" />
     <PackageReference Include="Microsoft.Extensions.AI.AzureAIInference" />
+    <PackageReference Include="Microsoft.Extensions.Options" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TsunaCan.XmlDocumentationTranslator.Core\TsunaCan.XmlDocumentationTranslator.Core.csproj" />
