--- a/src/TsunaCan.XmlDocumentationTranslator.Core/TsunaCan.XmlDocumentationTranslator.Core.csproj
+++ b/src/TsunaCan.XmlDocumentationTranslator.Core/TsunaCan.XmlDocumentationTranslator.Core.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.Options" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
+    <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" />
   </ItemGroup>
 
   <ItemGroup>
