プロジェクトに IsPackable プロパティを追加
`IsPackable` プロパティが追加され、値は `false` に設定されました。これにより、このプロジェクトは NuGet パッケージとしてパッキングできなくなります。

--- a/src/TsunaCan.XmlDocumentationTranslator.Cli/TsunaCan.XmlDocumentationTranslator.Cli.csproj
+++ b/src/TsunaCan.XmlDocumentationTranslator.Cli/TsunaCan.XmlDocumentationTranslator.Cli.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <IsPackable>false</IsPackable>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
