--- a/src/TsunaCan.XmlDocumentationTranslator.AI/TsunaCan.XmlDocumentationTranslator.AI.csproj
+++ b/src/TsunaCan.XmlDocumentationTranslator.AI/TsunaCan.XmlDocumentationTranslator.AI.csproj
@@ -1,12 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <PropertyGroup>
+    <PackageId>TsunaCan.XmlDocumentationTranslator.AI</PackageId>
+    <Authors>masatsuna</Authors>
+    <Description>
+      XML documentation translator AI project.
+    </Description>
+    <Copyright>Copyright (c) 2025 masatsuna</Copyright>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/tsuna-can-se/xml-documentation-translator/tree/main/src/TsunaCan.XmlDocumentationTranslator.AI</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>https://github.com/tsuna-can-se/xml-documentation-translator/releases</PackageReleaseNotes>
+    <RepositoryUrl>https://github.com/tsuna-can-se/xml-documentation-translator.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryBranch>main</RepositoryBranch>
+  </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.AI" />
     <PackageReference Include="Microsoft.Extensions.AI.AzureAIInference" />
     <PackageReference Include="Microsoft.Extensions.Options" />
   </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\TsunaCan.XmlDocumentationTranslator.Core\TsunaCan.XmlDocumentationTranslator.Core.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Include="../../README.md" Pack="true" PackagePath="/" />
+  </ItemGroup>
+  
   <ItemGroup>
     <Compile Update="Resources\Messages.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -14,10 +38,12 @@
       <DependentUpon>Messages.resx</DependentUpon>
     </Compile>
   </ItemGroup>
+  
   <ItemGroup>
     <EmbeddedResource Update="Resources\Messages.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Messages.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+
 </Project>
