ターゲットフレームワークを netstandard2.0 に設定
プロジェクトファイル `TsunaCan.XmlDocumentationTranslator.Core.csproj` のターゲットフレームワークを `netstandard2.0` に変更しました。これにより、他の .NET プラットフォームとの互換性が向上します。

--- a/src/TsunaCan.XmlDocumentationTranslator.Core/TsunaCan.XmlDocumentationTranslator.Core.csproj
+++ b/src/TsunaCan.XmlDocumentationTranslator.Core/TsunaCan.XmlDocumentationTranslator.Core.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>TsunaCan.XmlDocumentationTranslator</RootNamespace>
     <PackageId>TsunaCan.XmlDocumentationTranslator.Core</PackageId>
     <Authors>masatsuna</Authors>
