--- a/src/TsunaCan.XmlDocumentationTranslator.Core/TsunaCan.XmlDocumentationTranslator.Core.csproj
+++ b/src/TsunaCan.XmlDocumentationTranslator.Core/TsunaCan.XmlDocumentationTranslator.Core.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Nullable>disable</Nullable>
+    <ImplicitUsings>disable</ImplicitUsings>
     <RootNamespace>TsunaCan.XmlDocumentationTranslator</RootNamespace>
     <PackageId>TsunaCan.XmlDocumentationTranslator.Core</PackageId>
     <Authors>masatsuna</Authors>
