--- a/src/TsunaCan.XmlDocumentationTranslator.AI/TsunaCan.XmlDocumentationTranslator.AI.csproj
+++ b/src/TsunaCan.XmlDocumentationTranslator.AI/TsunaCan.XmlDocumentationTranslator.AI.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <ImplicitUsings>disable</ImplicitUsings>
+    <!--<ImplicitUsings>disable</ImplicitUsings>-->
     <PackageId>TsunaCan.XmlDocumentationTranslator.AI</PackageId>
     <Authors>masatsuna</Authors>
     <Description>
