--- a/tests/Test.TsunaCan.XmlDocumentationTranslator.AI/Test.TsunaCan.XmlDocumentationTranslator.AI.csproj
+++ b/tests/Test.TsunaCan.XmlDocumentationTranslator.AI/Test.TsunaCan.XmlDocumentationTranslator.AI.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
   </PropertyGroup>
 
   <ItemGroup>
