--- a/tests/Test.TsunaCan.XmlDocumentationTranslator.Core/Test.TsunaCan.XmlDocumentationTranslator.Core.csproj
+++ b/tests/Test.TsunaCan.XmlDocumentationTranslator.Core/Test.TsunaCan.XmlDocumentationTranslator.Core.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
     <RootNamespace>TsunaCan.XmlDocumentationTranslator</RootNamespace>
   </PropertyGroup>
 
