--- a/.github/workflows/build.ci.yml
+++ b/.github/workflows/build.ci.yml
@@ -17,13 +17,13 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        framework_version: [net472, net8.0, net9.0]
+        framework-version: [net472, net8.0, net9.0]
         exclude:
           - vm_image: ubuntu-latest
-            framework_version: net472
+            framework-version: net472
         include:
-          - framework_version: net8.0
-          - framework_version: net9.0
+          - framework-version: net8.0
+          - framework-version: net9.0
 
     runs-on: ${{ matrix.os }}
    
