--- a/tests/Test.TsunaCan.XmlDocumentationTranslator.Core/Test.TsunaCan.XmlDocumentationTranslator.Core.csproj
+++ b/tests/Test.TsunaCan.XmlDocumentationTranslator.Core/Test.TsunaCan.XmlDocumentationTranslator.Core.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Maris.Logging.Testing" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
+    <PackageReference Include="Mono.Cecil" Condition="'$(TargetFramework)' == 'net472'" />
     <PackageReference Include="Moq" />
     <PackageReference Include="xunit.v3" />
     <PackageReference Include="xunit.runner.visualstudio" />
