.NET Framework 4.7.2でも単体テストを実行する (#51)
* .NET Framework 4.7.2でテストを実行するように修正

* SuppressTfmSupportBuildWarningsをtrueに設定

* ソースジェネレーターを利用した実装を元に戻す

* .NET Framework 4.7.2でテストを実行するように修正

* ワークフローのファイル名を修正

* 変数名の誤りを修正

* OSの変数名を修正

* Mono.Cecilの参照をnet472の時に限り追加

--- a/.github/workflows/build.ci.yml
+++ b/.github/workflows/build.ci.yml
@@ -17,7 +17,13 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        framework-version: [net8.0, net9.0]
+        framework-version: [net472, net8.0, net9.0]
+        exclude:
+          - os: ubuntu-latest
+            framework-version: net472
+        include:
+          - framework-version: net8.0
+          - framework-version: net9.0
 
     runs-on: ${{ matrix.os }}
    
