--- a/tests/Test.TsunaCan.XmlDocumentationTranslator.AI/Test.TsunaCan.XmlDocumentationTranslator.AI.csproj
+++ b/tests/Test.TsunaCan.XmlDocumentationTranslator.AI/Test.TsunaCan.XmlDocumentationTranslator.AI.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +17,7 @@
     <PackageReference Include="Maris.Logging.Testing" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
+    <PackageReference Include="Mono.Cecil" Condition="'$(TargetFramework)' == 'net472'" />
     <PackageReference Include="Moq" />
     <PackageReference Include="xunit.v3" />
     <PackageReference Include="xunit.runner.visualstudio" />
