THIRD-PARTY-NOTICES.txtと.vsフォルダーをリントの対象から除外

--- a/.textlintignore
+++ b/.textlintignore
@@ -1,3 +1,7 @@
 # dotnet アプリケーションのビルド成果物フォルダーは検査を除外
 src/**/@(obj|bin)/**
 tests/**/@(obj|bin)/**
+
+# ignore auto generated files.
+.vs/**
+**/THIRD-PARTY-NOTICES.txt
