正規表現のエスケープ文字を修正

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,8 @@ name: リリース
 on:
   push:
     tags: 
-      - 'v[0-9]+.[0-9]+.[0-9]+'
-      - 'v[0-9]+.[0-9]+.[0-9]+-Beta[0-9]+'
+      - 'v[0-9]+\.[0-9]+\.[0-9]+'
+      - 'v[0-9]+\.[0-9]+\.[0-9]+-Beta[0-9]+'
 
 env:
   PACKAGE_ARTIFACT_NAME: packages
